--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/icons/icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
     <!-- Font Awesome 6 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" integrity="sha384-/frq1SRXYH/bSyou/HUp/hib7RVN1TawQYja658FEOodR/FQBKVqT9Ol+Oz3Olq5" crossorigin="anonymous"/> 
     <!-- Manifest -->
     <link rel="manifest" href="./manifest.json" type="application/json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Diundang - Digital Wedding Invitation</title>
+    <title>Chelu y Brian</title>
     <!-- Meta Tag -->
     <!-- Primary Meta Tags -->
     <meta name="title" content="Diundang — Digital Wedding Invitation">
