--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <title>Chelu y Brian</title>
     <!-- Meta Tag -->
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Diundang — Digital Wedding Invitation">
-    <meta name="description" content="Permudah Pernikahan Anda dengan ©Diundang - Produk Undangan Digital Berbasis Website Dengan Tampilan Modern dan Menarik">
+    <meta name="title" content="Shipupi — Invitacion Digital">
+    <meta name="description" content="Invitacion Digital de Casamiento">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://diundang-demo-1.vercel.app">
-    <meta property="og:title" content="Diundang — Digital Wedding Invitation">
-    <meta property="og:description" content="Permudah Pernikahan Anda dengan ©Diundang - Produk Undangan Digital Berbasis Website Dengan Tampilan Modern dan Menarik">
-    <meta property="og:image" content="https://dl.dropbox.com/s/35zqeea8epuvhte/diundang-logo.png?dl=2">
+    <meta property="og:url" content="http://github.com/shipupi/casamiento">
+    <meta property="og:title" content="Shipupi - Invitacion Digital de Casamiento">
+    <meta property="og:description" content="Invitacion Digital de Casamiento">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/22296450?v=4">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="http://diundang-demo-1.vercel.app">
-    <meta property="twitter:title" content="Diundang — Digital Wedding Invitation">
-    <meta property="twitter:description" content="Permudah Pernikahan Anda dengan ©Diundang - Produk Undangan Digital Berbasis Website Dengan Tampilan Modern dan Menarik">
-    <meta property="twitter:image" content="https://dl.dropbox.com/s/35zqeea8epuvhte/diundang-logo.png?dl=2">
+    <meta property="twitter:title" content="Shipupi - Invitacion Digital de Casamiento">
+    <meta property="twitter:description" content="Invitacion Digital de Casamiento">
+    <meta property="twitter:image" content="https://avatars.githubusercontent.com/u/22296450?v=4">
   </head>
   <body>
     <div id="app"></div>
