Nuevas imagenes y demas fixes

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <title>Chelu y Brian</title>
     <!-- Meta Tag -->
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Shipupi — Invitacion Digital">
-    <meta name="description" content="Invitacion Digital de Casamiento">
+    <meta name="title" content="¡Nos casamos!">
+    <meta name="description" content="Invitacion al casamiento de Brian y Chelu">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://github.com/shipupi/casamiento">
-    <meta property="og:title" content="Shipupi - Invitacion Digital de Casamiento">
-    <meta property="og:description" content="Invitacion Digital de Casamiento">
+    <meta property="og:title" content="¡Nos casamos!">
+    <meta property="og:description" content="Invitacion al casamiento de Brian y Chelu">
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/22296450?v=4">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="http://diundang-demo-1.vercel.app">
-    <meta property="twitter:title" content="Shipupi - Invitacion Digital de Casamiento">
-    <meta property="twitter:description" content="Invitacion Digital de Casamiento">
+    <meta property="twitter:title" content="¡Nos casamos!">
+    <meta property="twitter:description" content="Invitacion al casamiento de Brian y Chelu">
     <meta property="twitter:image" content="https://avatars.githubusercontent.com/u/22296450?v=4">
   </head>
   <body>
