--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <meta property="og:url" content="http://github.com/shipupi/casamiento">
     <meta property="og:title" content="¡Nos casamos!">
     <meta property="og:description" content="Invitacion al casamiento de Brian y Chelu">
-    <meta property="og:image" content="https://avatars.githubusercontent.com/u/22296450?v=4">
+    <meta property="og:image" content="https://drive.google.com/file/d/1B8-RyeUKh8b4adqKaYMwig-F-BPB9i_1/view?usp=sharing">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="http://diundang-demo-1.vercel.app">
     <meta property="twitter:title" content="¡Nos casamos!">
     <meta property="twitter:description" content="Invitacion al casamiento de Brian y Chelu">
-    <meta property="twitter:image" content="https://avatars.githubusercontent.com/u/22296450?v=4">
+    <meta property="twitter:image" content="https://drive.google.com/file/d/1B8-RyeUKh8b4adqKaYMwig-F-BPB9i_1/view?usp=sharing">
   </head>
   <body>
     <div id="app"></div>
