probando imagen de sharing v2

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://github.com/shipupi/casamiento">
+    <meta property="og:url" content="https://brianychelu.com.ar">
     <meta property="og:title" content="¡Nos casamos!">
     <meta property="og:description" content="Invitacion al casamiento de Brian y Chelu">
-    <meta property="og:image" content="https://drive.google.com/file/d/1B8-RyeUKh8b4adqKaYMwig-F-BPB9i_1/view?usp=sharing">
+    <meta property="og:image" content="https://brianychelu.com.ar/couples/wide.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="http://diundang-demo-1.vercel.app">
+    <meta property="twitter:url" content="https://brianychelu.com.ar">
     <meta property="twitter:title" content="¡Nos casamos!">
     <meta property="twitter:description" content="Invitacion al casamiento de Brian y Chelu">
-    <meta property="twitter:image" content="https://drive.google.com/file/d/1B8-RyeUKh8b4adqKaYMwig-F-BPB9i_1/view?usp=sharing">
+    <meta property="twitter:image" content="https://brianychelu.com.ar/couples/wide.jpg">
   </head>
   <body>
     <div id="app"></div>
